# limTOD

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  examples.ipynb  flicker_model.py  meersim_tutorial.ipynb  notebook.ipynb  pyproject.toml  requirements.txt  setup.py  tod_simulator.py
examples/: TODsim_examples.ipynb  demonstration.ipynb  mm_example.ipynb
examples/DSA/: README.md  beam_map_lst18h.fits  beam_map_zenith.fits  dsa_meerklass_scan.ipynb  dsa_scan_demo.ipynb  dsa_steer_and_stare.ipynb  dsa_vis.py  mapmaker_ops_meerklass_ns16_baseline.pkl  mapmaker_ops_meerklass_ns16_cascade.pkl  mapmaker_ops_steer_stare_ns16_baseline.pkl  mapmaker_ops_steer_stare_ns8.pkl  simulated_TODs_meerklass_baseline.npz  simulated_TODs_meerklass_cascade.npz  simulated_TODs_steer_stare.npz  simulated_TODs_steer_stare_baseline.npz
examples/DSA/figures/: make_beam_figure.py  make_figures.py  power_spectra_comparison.npz  power_spectra_comparison_hp.npz  power_spectra_comparison_noHP.npz
examples/DSA/scripts/: README.md  build_mapmaker_ops.py  compare_maps.py  compare_power_spectra.py  diagnose_noise_variance.py  produce_focus_maps.py  produce_proposal_figures.py  run_analysis_A.sh  run_analysis_B.sh  sim_meerklass_tod.py  sim_steer_and_stare_tod.py
examples/RotatingBeam/: Nside_4.ipynb  Nside_8.ipynb  baseSim.ipynb  baseSim2.ipynb
limTOD/: HPW_filter.py  __init__.py  mpiutil.py  simulator.py  sky_model.py  visual.py
meerTOD/: __init__.py  flicker_model.py  mpiutil.py  tod_simulator.py
scripts/: README.md  make_map.py  simulate_tod.py
test/: mm_example.ipynb
tests/: test_hpw_filter.py  test_rotate_alm.py
