[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limTOD"
version = "1.1.0"
authors = [
    {name = "Zheng Zhang", email = "zheng.zhang@manchester.ac.uk"},
]
description = "Time-Ordered Data Simulator for MeerKLASS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
keywords = [
    "time-ordered data",
    "simulation",
    "MeerKAT",
    "HEALPix",
    "beam patterns",
    "sky models",
    "noise modeling",
    "map making"
]
dependencies = [
    "numpy>=1.19.0",
    "healpy>=1.14.0",
    "astropy>=4.0.0",
    "scipy>=1.5.0",
    "tqdm>=4.60.0",
    "mpi4py>=3.0.0",
    "pygdsm>=1.2.0",
    "mpmath>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0",
    "matplotlib>=3.3.0",
]
docs = [
    "sphinx>=4.0",
    "sphinx-rtd-theme>=1.0",
    "jupyter>=1.0",
    "matplotlib>=3.3.0",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
]

[project.urls]
Homepage = "https://github.com/zzhang0123/limTOD"
"Bug Reports" = "https://github.com/zzhang0123/limTOD/issues"
"Source Code" = "https://github.com/zzhang0123/limTOD"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["limTOD*"]

[tool.setuptools.package-data]
limTOD = ["data/*", "examples/*"]